--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@
     width: 100%;
     height: 50px;
     position: absolute;
+    padding-top: 5px;
     bottom: 0;
     background-color: rgba(1, 78, 1, 0.685);
     justify-content: space-around;
@@ -202,4 +203,24 @@
 .songlist ul li > div{
     width: 200px;
     font-size: 10px;
+}
+
+.seekbar{
+    height: 10px;
+    width: 100%;
+    background-color:wheat;
+    position: absolute;
+    bottom: 10px;
+    border-radius: 10px;
+    padding: 0;
+}
+
+.circle{
+    width: 10px;
+    height: 10px;
+    background-color: rgb(59, 59, 59);
+    border-radius: 10px;
+    position: relative;
+    left: 0%;
+    transition:all 0.5s ease-in 0s ;
 }
